--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,5 +1,8 @@
 {
   "DetailedErrors": true,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=StingrayFeederDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
